--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
 	</head>
 	<body>
 		<!-- шапка сайту -->
-		<header class="header">
-			<!-- навігація -->
+		<!-- <header class="header">
+
 			<div class="container">
 				<nav class="nav">
 					<a href="./index.html" class="logo"> <span class="logo__element">Web</span>Studio</a>
+					
+					<div class="mobile-nav"></div>
+
+					<div class="desktop-nav"></div>
 					<ul class="nav__list">
 						<li class="nav__item">
 							<a href="./index.html" class="link link--current nav__link">Студія</a>
@@ -56,12 +60,12 @@
 					</ul>
 				</nav>
 
-				<!-- контакти -->
+
 			</div>
-		</header>
+		</header> -->
 		<main>
 			<!-- герой -->
-			<section class="section-hero">
+			<!-- <section class="section-hero">
 				<div class="container">
 					<h1 class="section-hero__title">Ефективні рішення для вашого бізнесу</h1>
 					<button type="button" class="button button__modal" data-modal-open>Замовити послугу</button>
@@ -131,7 +135,7 @@
 						</button>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- Особливості, заголовок потім приховати -->
 			<section class="section-feature">
@@ -139,35 +143,42 @@
 					<h2 class="visually-hidden">Особливості</h2>
 					<ul class="section-feature__list">
 						<li class="section-feature__item">
-							<svg class="section-feature__img">
-								<use href="./images/symbol-defs.svg#icon-antenna-1" Width="70px" Height="70px"></use>
-							</svg>
-
+							<div class="section-feature__block">
+								<svg class="section-feature__img">
+									<use href="./images/symbol-defs.svg#icon-antenna-1" Width="70px" Height="70px"></use>
+								</svg>
+							</div>
 							<h3 class="section-feature__title">Увага до деталей</h3>
 							<p class="section-feature__text">
 								Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
 							</p>
 						</li>
 						<li class="section-feature__item">
-							<svg class="section-feature__img">
-								<use href="./images/symbol-defs.svg#icon-clock-1" Width="70px" Height="70px"></use>
-							</svg>
+							<div class="section-feature__block">
+								<svg class="section-feature__img">
+									<use href="./images/symbol-defs.svg#icon-clock-1" Width="70px" Height="70px"></use>
+								</svg>
+							</div>
 							<h3 class="section-feature__title">Пунктуальність</h3>
 							<p class="section-feature__text">
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
 						<li class="section-feature__item">
-							<svg class="section-feature__img">
-								<use href="./images/symbol-defs.svg#icon-diagram" Width="70px" Height="70px"></use>
-							</svg>
+							<div class="section-feature__block">
+								<svg class="section-feature__img">
+									<use href="./images/symbol-defs.svg#icon-diagram" Width="70px" Height="70px"></use>
+								</svg>
+							</div>
 							<h3 class="section-feature__title">Планування</h3>
 							<p class="section-feature__text">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
 						<li class="section-feature__item">
-							<svg class="section-feature__img">
-								<use href="./images/symbol-defs.svg#icon-astronaut-1" Width="70px" Height="70px"></use>
-							</svg>
+							<div class="section-feature__block">
+								<svg class="section-feature__img">
+									<use href="./images/symbol-defs.svg#icon-astronaut-1" Width="70px" Height="70px"></use>
+								</svg>
+							</div>
 							<h3 class="section-feature__title">Сучасні технології</h3>
 							<p class="section-feature__text">
 								Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -205,7 +216,7 @@
 
 					<ul class="section-team__list">
 						<li class="section-team__item">
-							<img src="./images/index/img-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+							<img class="section-team__img"  src="./images/index/img-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Ігор Дем'яненко</h3>
 								<p class="section-team__text">Product Designer</p>
@@ -252,7 +263,7 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img src="./images/index/img-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+							<img class="section-team__img" src="./images/index/img-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Ольга Рєпіна</h3>
 								<p class="section-team__text">Frontend Developer</p>
@@ -299,7 +310,7 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img src="./images/index/img-3.jpg" alt="Микола Тарасов" width="270" height="260" />
+							<img class="section-team__img" src="./images/index/img-3.jpg" alt="Микола Тарасов" width="270" height="260" />
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Микола Тарасов</h3>
 								<p class="section-team__text">Marketing</p>
@@ -346,7 +357,7 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img src="./images/index/img-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+							<img class="section-team__img" src="./images/index/img-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Михайло Єрмаков</h3>
 								<p class="section-team__text">UI Designer</p>
@@ -454,8 +465,6 @@
 				<div class="footer__section">
 					<div class="footer__block">
 						<a href="./index.html" class="logo logo--inversion"> <span class="logo__element">Web</span>Studio</a>
-
-						<!-- адреса -->
 						<address class="address">
 							<ul class="address__list">
 								<li class="address__item">
