--- a/index.html
+++ b/index.html
@@ -23,49 +23,96 @@
 	</head>
 	<body>
 		<!-- шапка сайту -->
-		<!-- <header class="header">
-
+		<header class="header">
 			<div class="container">
 				<nav class="nav">
 					<a href="./index.html" class="logo"> <span class="logo__element">Web</span>Studio</a>
-					
-					<div class="mobile-nav"></div>
+					<button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+						<svg class="menu-toggle__icon">
+							<use href="./images/symbol-defs.svg#icon-mobile-menu" Width="40px" Height="40px"></use>
+						</svg>
+					</button>
+					<div class="menu-container js-menu-container" id="mobile-menu">
+						<button class="menu-toggle js-close-menu">
+							<svg class="menu-toggle__icon">
+								<use href="./images/symbol-defs.svg#icon-mobile-close" Width="40px" Height="40px"></use>
+							</svg>
+						</button>
+						<div class="mobile-menu">
+							<ul class="nav__list">
+								<li class="nav__item">
+									<a href="./index.html" class="link link--current nav__link">Студія</a>
+								</li>
+								<li class="nav__item"><a href="./portfolio.html" class="link nav__link">Портфоліо</a></li>
+								<li class="nav__item"><a href="" class="link nav__link">Контакти</a></li>
+							</ul>
 
-					<div class="desktop-nav"></div>
-					<ul class="nav__list">
-						<li class="nav__item">
-							<a href="./index.html" class="link link--current nav__link">Студія</a>
-						</li>
-						<li class="nav__item"><a href="./portfolio.html" class="link nav__link">Портфоліо</a></li>
-						<li class="nav__item"><a href="" class="link nav__link">Контакти</a></li>
-					</ul>
+							<ul class="header__list">
+								<li class="header__item">
+									<a href="mailto:info@devstudio.com" class="link header__link">
+										<svg class="header__icon">
+											<use href="./images/symbol-defs.svg#icon-envelope" Width="16px" Height="12px"></use>
+										</svg>
 
-					<ul class="header__list">
-						<li class="header__item">
-							<a href="mailto:info@devstudio.com" class="link header__link">
-								<svg class="header__icon">
-									<use href="./images/symbol-defs.svg#icon-envelope" Width="16px" Height="12px"></use>
-								</svg>
+										info@devstudio.com
+									</a>
+								</li>
+								<li class="header__item">
+									<a href="tel:+380961111111" class="link header__link">
+										<svg class="header__icon header__icon--smartphone">
+											<use href="./images/symbol-defs.svg#icon-smartphone" Width="10px" Height="16px"></use>
+										</svg>
+										+38 096 111 11 11</a
+									>
+								</li>
+							</ul>
 
-								info@devstudio.com
-							</a>
-						</li>
-						<li class="header__item">
-							<a href="tel:+380961111111" class="link header__link">
-								<svg class="header__icon header__icon--smartphone">
-									<use href="./images/symbol-defs.svg#icon-smartphone" Width="10px" Height="16px"></use></svg
-								>+38 096 111 11 11</a
-							>
-						</li>
-					</ul>
+							<ul class="mobile-social">
+								<li class="mobile-social__item">
+									<a
+										class=" "
+										href="https://www.instagram.com/"
+										target="_blank"
+										rel="noopener noreferrer"
+									>Instagram
+									</a>
+								</li>
+								<li class="mobile-social__item">
+									<a
+										class=" "
+										href="https://twitter.com/"
+										target="_blank"
+										rel="noopener noreferrer"
+									>Twitter
+									</a>
+								</li>
+								<li class="mobile-social__item">
+									<a
+										class=""
+										href="https://www.facebook.com/"
+										target="_blank"
+										rel="noopener noreferrer"
+									>Facebook
+									</a>
+								</li>
+								<li class="mobile-social__item">
+									<a
+										class=" "
+										href="https://linkedin.com/"
+										target="_blank"
+										rel="noopener noreferrer"
+									>LinkedIn
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</nav>
-
-
 			</div>
-		</header> -->
+		</header>
 		<main>
 			<!-- герой -->
-			<!-- <section class="section-hero">
+			<section class="section-hero">
 				<div class="container">
 					<h1 class="section-hero__title">Ефективні рішення для вашого бізнесу</h1>
 					<button type="button" class="button button__modal" data-modal-open>Замовити послугу</button>
@@ -135,7 +182,7 @@
 						</button>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 			<!-- Особливості, заголовок потім приховати -->
 			<section class="section-feature">
@@ -216,7 +263,13 @@
 
 					<ul class="section-team__list">
 						<li class="section-team__item">
-							<img class="section-team__img"  src="./images/index/img-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+							<img
+								class="section-team__img"
+								src="./images/index/img-1.jpg"
+								alt="Ігор Дем'яненко"
+								width="270"
+								height="260"
+							/>
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Ігор Дем'яненко</h3>
 								<p class="section-team__text">Product Designer</p>
@@ -263,7 +316,13 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img class="section-team__img" src="./images/index/img-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+							<img
+								class="section-team__img"
+								src="./images/index/img-2.jpg"
+								alt="Ольга Рєпіна"
+								width="270"
+								height="260"
+							/>
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Ольга Рєпіна</h3>
 								<p class="section-team__text">Frontend Developer</p>
@@ -310,7 +369,13 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img class="section-team__img" src="./images/index/img-3.jpg" alt="Микола Тарасов" width="270" height="260" />
+							<img
+								class="section-team__img"
+								src="./images/index/img-3.jpg"
+								alt="Микола Тарасов"
+								width="270"
+								height="260"
+							/>
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Микола Тарасов</h3>
 								<p class="section-team__text">Marketing</p>
@@ -357,7 +422,13 @@
 							</div>
 						</li>
 						<li class="section-team__item">
-							<img class="section-team__img" src="./images/index/img-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+							<img
+								class="section-team__img"
+								src="./images/index/img-4.jpg"
+								alt="Михайло Єрмаков"
+								width="270"
+								height="260"
+							/>
 							<div class="section-team__cell">
 								<h3 class="section-team__subtitle">Михайло Єрмаков</h3>
 								<p class="section-team__text">UI Designer</p>
@@ -558,5 +629,12 @@
 		</footer>
 
 		<script src="./js/modal.js"></script>
+		<script
+			defer
+			src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+			integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+			crossorigin="anonymous"
+		></script>
+		<script defer src="js/mobile-menu.js"></script>
 	</body>
 </html>
